{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 666,
  "lineage": "4c2969a2-8bef-beb2-3045-d2a0a872b6ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "litellm_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-0a9a2be5fc9f0f539",
            "description": "Security group for LiteLLM PostgreSQL instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9a2be5fc9f0f539",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "automode-cluster-litellm-db-sg",
            "name_prefix": "",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automode-cluster-litellm-db-sg"
            },
            "tags_all": {
              "Name": "automode-cluster-litellm-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-0456b6870682421f8",
            "description": "Security group for RDS PostgreSQL instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0456b6870682421f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "automode-cluster-rds-sg",
            "name_prefix": "",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automode-cluster-rds-sg"
            },
            "tags_all": {
              "Name": "automode-cluster-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-0835bdff6019c968b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0835bdff6019c968b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "automode-cluster-vpc-endpoints-20250620021827133500000038",
            "name_prefix": "automode-cluster-vpc-endpoints-",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-vpc-endpoints-sg"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:vpc-endpoint/vpce-08d37f4cecffbcc8e",
            "dns_entry": [
              {
                "dns_name": "vpce-08d37f4cecffbcc8e-4euufv5y.api.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-08d37f4cecffbcc8e-4euufv5y-ap-southeast-3a.api.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-08d37f4cecffbcc8e-4euufv5y-ap-southeast-3b.api.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-08d37f4cecffbcc8e-4euufv5y-ap-southeast-3c.api.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "api.ecr.ap-southeast-3.amazonaws.com",
                "hosted_zone_id": "Z07306958E626OU9HDEM"
              },
              {
                "dns_name": "ecr.ap-southeast-3.api.aws",
                "hosted_zone_id": "Z05799232GXANONGGZF6K"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08d37f4cecffbcc8e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010dc8d740dd40fa4",
              "eni-09115024f9bda3cd4",
              "eni-0cc1d36c29502dff8"
            ],
            "owner_id": "980921733825",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0835bdff6019c968b"
            ],
            "service_name": "com.amazonaws.ap-southeast-3.ecr.api",
            "service_region": "ap-southeast-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.185",
                "subnet_id": "subnet-08472d0ba75ba92e1"
              },
              {
                "ipv4": "10.0.30.12",
                "subnet_id": "subnet-0aab9bafb5420a220"
              },
              {
                "ipv4": "10.0.41.96",
                "subnet_id": "subnet-01ce221a540155cbb"
              }
            ],
            "subnet_ids": [
              "subnet-01ce221a540155cbb",
              "subnet-08472d0ba75ba92e1",
              "subnet-0aab9bafb5420a220"
            ],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ecr-api-vpc-endpoint",
              "Purpose": "ECR API access for image pulls"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ecr-api-vpc-endpoint",
              "Purpose": "ECR API access for image pulls"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:vpc-endpoint/vpce-01d23f4b9409a870e",
            "dns_entry": [
              {
                "dns_name": "vpce-01d23f4b9409a870e-1nsle0gc.dkr.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-01d23f4b9409a870e-1nsle0gc-ap-southeast-3a.dkr.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-01d23f4b9409a870e-1nsle0gc-ap-southeast-3c.dkr.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "vpce-01d23f4b9409a870e-1nsle0gc-ap-southeast-3b.dkr.ecr.ap-southeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z03881013RZ9BYYZO8N5W"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-3.amazonaws.com",
                "hosted_zone_id": "Z0402225II1NMK46IB2B"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-3.amazonaws.com",
                "hosted_zone_id": "Z0402225II1NMK46IB2B"
              },
              {
                "dns_name": "dkr-ecr.ap-southeast-3.on.aws",
                "hosted_zone_id": "Z04094132XOF3411MNNIP"
              },
              {
                "dns_name": "*.dkr-ecr.ap-southeast-3.on.aws",
                "hosted_zone_id": "Z04094132XOF3411MNNIP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01d23f4b9409a870e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01f946f05cfc58815",
              "eni-0c5a0ae3da07f578c",
              "eni-0f5f91be4fefc77fc"
            ],
            "owner_id": "980921733825",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0835bdff6019c968b"
            ],
            "service_name": "com.amazonaws.ap-southeast-3.ecr.dkr",
            "service_region": "ap-southeast-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.29.189",
                "subnet_id": "subnet-0aab9bafb5420a220"
              },
              {
                "ipv4": "10.0.3.97",
                "subnet_id": "subnet-08472d0ba75ba92e1"
              },
              {
                "ipv4": "10.0.36.211",
                "subnet_id": "subnet-01ce221a540155cbb"
              }
            ],
            "subnet_ids": [
              "subnet-01ce221a540155cbb",
              "subnet-08472d0ba75ba92e1",
              "subnet-0aab9bafb5420a220"
            ],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ecr-dkr-vpc-endpoint",
              "Purpose": "ECR Docker registry access for image pulls"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ecr-dkr-vpc-endpoint",
              "Purpose": "ECR Docker registry access for image pulls"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:vpc-endpoint/vpce-0ef5cc978f0ceb989",
            "cidr_blocks": [
              "3.5.36.0/22",
              "52.95.178.0/23",
              "52.95.177.0/24"
            ],
            "id": "vpce-0ef5cc978f0ceb989",
            "owner_id": "980921733825",
            "policy": "{\"Statement\":[{\"Action\":\"s3:*\",\"Condition\":{\"StringEquals\":{\"aws:sourceVpc\":\"vpc-081e38e18af8095e0\"}},\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"AllowVPCAccess\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-64a7420d",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0211ba92a2a6d2836"
            ],
            "service_name": "com.amazonaws.ap-southeast-3.s3",
            "service_region": "ap-southeast-3",
            "state": "available",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-s3-vpc-endpoint",
              "Purpose": "Secure S3 access for ECR and OpenWebUI"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-s3-vpc-endpoint",
              "Purpose": "Secure S3 access for ECR and OpenWebUI"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-0d51b3baa297700a4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d51b3baa297700a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06744b9d82bfeefc6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "automode-cluster-cluster-2025062002182846850000003b",
            "name_prefix": "automode-cluster-cluster-",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-cluster"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-06744b9d82bfeefc6",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06744b9d82bfeefc6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51b3baa297700a4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "automode-cluster-node-2025062002182832430000003a",
            "name_prefix": "automode-cluster-node-",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-node",
              "kubernetes.io/cluster/automode-cluster": "owned"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-node",
              "kubernetes.io/cluster/automode-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3671196207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d51b3baa297700a4",
            "security_group_rule_id": "sgr-0e2e3d6887f448e44",
            "self": false,
            "source_security_group_id": "sg-06744b9d82bfeefc6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-253101486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-05a1b7c18d1a9802b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-993825429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-0f23e67af287ef8e6",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-168731621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-09f09c6b0fd77994e",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3276588147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-08132b23e1639a8d1",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3490773074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-0681888017dad5be1",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3031550873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-0445cd227a327d392",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3481877653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-05753d9dbfc51182d",
            "self": false,
            "source_security_group_id": "sg-0d51b3baa297700a4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3799918378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-050cabf1bacb8cfdb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1830928672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-0a59ef30d4fb80d3e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3380503247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06744b9d82bfeefc6",
            "security_group_rule_id": "sgr-0c50dcbd793468096",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:network-acl/acl-035d840cb386edc08",
            "default_network_acl_id": "acl-035d840cb386edc08",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-035d840cb386edc08",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "980921733825",
            "subnet_ids": [
              "subnet-01ce221a540155cbb",
              "subnet-04f994ba85e8d8c2d",
              "subnet-08472d0ba75ba92e1",
              "subnet-088f2a47877f59fce",
              "subnet-0aab9bafb5420a220",
              "subnet-0b2d0b5062be324b5"
            ],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:route-table/rtb-0835258c51b4ba81c",
            "default_route_table_id": "rtb-0835258c51b4ba81c",
            "id": "rtb-0835258c51b4ba81c",
            "owner_id": "980921733825",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:security-group/sg-02920cc4e219a7133",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02920cc4e219a7133",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "980921733825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-default"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d280487f63c82b0",
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:elastic-ip/eipalloc-09d280487f63c82b0",
            "association_id": "eipassoc-0c6af9a34af7b26be",
            "domain": "vpc",
            "id": "eipalloc-09d280487f63c82b0",
            "network_border_group": "ap-southeast-3",
            "network_interface": "eni-00c13ef3c0a846b2a",
            "private_dns": "ip-10-0-48-144.ap-southeast-3.compute.internal",
            "private_ip": "10.0.48.144",
            "public_dns": "ec2-16-78-139-161.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "16.78.139.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ap-southeast-3a"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ap-southeast-3a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:internet-gateway/igw-01816148aa9d674a3",
            "id": "igw-01816148aa9d674a3",
            "owner_id": "980921733825",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d280487f63c82b0",
            "association_id": "eipassoc-0c6af9a34af7b26be",
            "connectivity_type": "public",
            "id": "nat-06586571780ff60ff",
            "network_interface_id": "eni-00c13ef3c0a846b2a",
            "private_ip": "10.0.48.144",
            "public_ip": "16.78.139.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2d0b5062be324b5",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ap-southeast-3a"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-ap-southeast-3a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0211ba92a2a6d28361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06586571780ff60ff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0211ba92a2a6d2836",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01816148aa9d674a3",
            "id": "r-rtb-02eeba11e31bdc5871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02eeba11e31bdc587",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:route-table/rtb-0211ba92a2a6d2836",
            "id": "rtb-0211ba92a2a6d2836",
            "owner_id": "980921733825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06586571780ff60ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:route-table/rtb-02eeba11e31bdc587",
            "id": "rtb-02eeba11e31bdc587",
            "owner_id": "980921733825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01816148aa9d674a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ca8f65a498209b",
            "route_table_id": "rtb-0211ba92a2a6d2836",
            "subnet_id": "subnet-08472d0ba75ba92e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61e0e680f25ec07",
            "route_table_id": "rtb-0211ba92a2a6d2836",
            "subnet_id": "subnet-0aab9bafb5420a220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130b5d0e06f3ae43",
            "route_table_id": "rtb-0211ba92a2a6d2836",
            "subnet_id": "subnet-01ce221a540155cbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049c6df0f2a9a3aa6",
            "route_table_id": "rtb-02eeba11e31bdc587",
            "subnet_id": "subnet-0b2d0b5062be324b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040071b5583d5efc0",
            "route_table_id": "rtb-02eeba11e31bdc587",
            "subnet_id": "subnet-088f2a47877f59fce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df794158dcf7862c",
            "route_table_id": "rtb-02eeba11e31bdc587",
            "subnet_id": "subnet-04f994ba85e8d8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-08472d0ba75ba92e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08472d0ba75ba92e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3a",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3a",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-0aab9bafb5420a220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aab9bafb5420a220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3b",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3b",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-01ce221a540155cbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3c",
            "availability_zone_id": "apse3-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce221a540155cbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3c",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-private-ap-southeast-3c",
              "karpenter.sh/discovery": "automode-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-0b2d0b5062be324b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2d0b5062be324b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-088f2a47877f59fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088f2a47877f59fce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:subnet/subnet-04f994ba85e8d8c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3c",
            "availability_zone_id": "apse3-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f994ba85e8d8c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921733825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster-public-ap-southeast-3c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-081e38e18af8095e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921733825:vpc/vpc-081e38e18af8095e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035d840cb386edc08",
            "default_route_table_id": "rtb-0835258c51b4ba81c",
            "default_security_group_id": "sg-02920cc4e219a7133",
            "dhcp_options_id": "dopt-0992496e49fe2bd33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081e38e18af8095e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0835258c51b4ba81c",
            "owner_id": "980921733825",
            "tags": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster"
            },
            "tags_all": {
              "Blueprint": "automode-cluster",
              "Name": "automode-cluster"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}